# tinyobjloader

./: .bintray.in  .cirrus.yml  .clang-format  .drone.yml  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CMakeLists.txt  MANIFEST.in  MODULE.bazel  README.md  appveyor.yml  azure-pipelines.yml  bootstrap-cmake-linux-with-pyhthon.sh  build.ninja  deploy.bat  float_parser_tests.cc  index.html  loader_example.cc  params.json  pbr-mtl.md  premake4.lua  pyproject.toml  setup.py  test.cc  tiny_obj_loader.cc  tiny_obj_loader.h  tinyobjloader-config.cmake.in  tinyobjloader.pc.in  wercker.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: issue-report.md
.github/workflows/: wheels.yml
doc/: mkdocs.yml
doc/docs/: index.md
examples/callback_api/: Makefile  main.cc
examples/metal_viewer/: README.md
examples/metal_viewer/ModelViewer/: Info.plist  main.m
examples/metal_viewer/ModelViewer.xcodeproj/: project.pbxproj
examples/metal_viewer/ModelViewer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/metal_viewer/ModelViewer.xcodeproj/project.xcworkspace/xcuserdata/middleware.xcuserdatad/: UserInterfaceState.xcuserstate
examples/metal_viewer/ModelViewer.xcodeproj/xcuserdata/middleware.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
examples/metal_viewer/ModelViewer.xcodeproj/xcuserdata/middleware.xcuserdatad/xcschemes/: ModelViewer.xcscheme  xcschememanagement.plist
examples/metal_viewer/ModelViewer/Base.lproj/: MainMenu.xib
examples/metal_viewer/ModelViewer/Renderer/: ModelUniforms.h  ModelViewerRenderer.h  ModelViewerRenderer.mm  Shaders.metal
examples/metal_viewer/ModelViewer/UserInterface/: AppDelegate.h  AppDelegate.m  ModelView.h  ModelView.m
examples/metal_viewer/ModelViewer/ViewerFoundation/: NuoMetalView.h  NuoMetalView.m
examples/metal_viewer/ModelViewer/ViewerFoundation/Loader/: NuoMaterial.cpp  NuoMaterial.h  NuoModelBase.cpp  NuoModelBase.h  NuoModelLoader.h  NuoModelLoader.mm
examples/metal_viewer/ModelViewer/ViewerFoundation/Meshes/: NuoMesh.h  NuoMesh.mm
examples/metal_viewer/ModelViewer/ViewerFoundation/Utilities/: NuoMathUtilities.cpp  NuoMathUtilities.h
examples/metal_viewer/glm/: CMakeLists.txt  readme.md
examples/metal_viewer/glm/cmake/: glm.pc.in
examples/metal_viewer/glm/doc/api/: a00015_source.html  a00105_source.html  a00119_source.html  a00163.html  a00190.html  index.html
examples/metal_viewer/glm/glm/detail/: func_integer.inl  func_matrix.hpp  func_trigonometric.inl  setup.hpp  type_mat2x4.hpp  type_mat2x4.inl  type_mat4x2.hpp  type_mat4x4.hpp  type_vec2.hpp  type_vec4.hpp  type_vec4.inl
examples/metal_viewer/glm/glm/gtc/: quaternion.hpp  quaternion.inl  reciprocal.hpp  round.inl
examples/metal_viewer/glm/glm/gtx/: dual_quaternion.hpp  dual_quaternion.inl  norm.hpp  norm.inl  string_cast.inl
examples/metal_viewer/glm/glm/simd/: platform.h
examples/metal_viewer/glm/test/core/: core_func_matrix.cpp  core_setup_message.cpp
examples/metal_viewer/glm/test/gtc/: gtc_round.cpp
examples/obj_sticher/: obj_sticher.cc  obj_writer.cc  obj_writer.h
examples/simple_gui/: CMakeLists.txt  README.md  glad.c  glad.h  main.cc
examples/skin_weight/: Makefile
examples/viewer/: CMakeLists.txt  Makefile  README.md  premake4.lua  trackball.cc  viewer.cc
examples/voxelize/: Makefile  main.cc
experimental/: LICENSE.ltalloc  Makefile  README.md  ltalloc.cc  ltalloc.h  ltalloc.hpp  optimized-parse.cc  premake4.lua  premake5.lua  tinyobj_loader_c.h  tinyobj_loader_opt.h  viewer-c.c  viewer.cc
experimental/multithreaded/: tinyobj_loader_opt.h
fuzzer/: README.md  fuzz_ParseFromString.cc
fuzzer/regression_runner/: Makefile
jni/: Android.mk  Makefile
models/: issue-356-leading-spaces-newmtl.mtl  texture-options-issue-85.mtl
python/: Makefile  README.md  TODO.md  bindings.cc  cornell_box_multimaterial_output.json  cornell_box_output.json  howto.py  main.cpp  pyTOL.cbp.mak  pyproject.toml  sample.py  setup.py  tiny_obj_loader.cc
sandbox/: optimized-parse.cc
stylesheets/: styles.css
tests/: Makefile  README.md  config-msvc.py  tester.cc  vcbuild.bat
tests/afl/: README.txt  id:000000,sig:11,src:000000,op:havoc,rep:128  id:000001,sig:11,src:000000,op:havoc,rep:64  id:000002,sig:11,src:000000,op:havoc,rep:4  id:000003,sig:11,src:000000,op:havoc,rep:4  id:000004,sig:11,src:000000,op:havoc,rep:2  id:000005,sig:11,src:000000,op:havoc,rep:4  id:000006,sig:11,src:000000,op:havoc,rep:128  id:000007,sig:11,src:000000,op:havoc,rep:32  id:000008,sig:11,src:000000,op:havoc,rep:8  id:000009,sig:11,src:000000,op:havoc,rep:128  id:000010,sig:11,src:000000,op:havoc,rep:16  id:000011,sig:11,src:000000,op:havoc,rep:8  id:000012,sig:06,src:000000,op:havoc,rep:32  id:000013,sig:11,src:000093,op:havoc,rep:4  id:000014,sig:11,src:000093,op:havoc,rep:64  id:000015,sig:11,src:000093,op:havoc,rep:2  id:000016,sig:11,src:000093,op:havoc,rep:8  id:000017,sig:11,src:000093,op:havoc,rep:4  id:000018,sig:06,src:000141,op:flip1,pos:449  id:000019,sig:06,src:000141,op:arith8,pos:446,val:+13  id:000020,sig:06,src:000141,op:havoc,rep:128  id:000021,sig:06,src:000141,op:havoc,rep:4  id:000022,sig:11,src:000141,op:havoc,rep:128  id:000023,sig:11,src:000141,op:havoc,rep:128  id:000024,sig:11,src:000141,op:havoc,rep:128  id:000025,sig:11,src:000141,op:havoc,rep:4  id:000026,sig:11,src:000141,op:havoc,rep:128  id:000027,sig:11,src:000141,op:havoc,rep:128  id:000028,sig:06,src:000253,op:havoc,rep:32  id:000029,sig:11,src:000263,op:havoc,rep:64  id:000030,sig:11,src:000263,op:havoc,rep:64  id:000031,sig:11,src:000263,op:havoc,rep:32  id:000032,sig:11,src:000263,op:havoc,rep:32  id:000033,sig:06,src:000266,op:havoc,rep:32  id:000034,sig:06,src:000266,op:havoc,rep:32  id:000035,sig:11,src:000271,op:havoc,rep:16  id:000036,sig:11,src:000271,op:havoc,rep:32  id:000037,sig:11,src:000271,op:havoc,rep:8  id:000038,sig:11,src:000271,op:havoc,rep:32  (+40 more)
tools/: travis_postbuild.sh
wasm/: Makefile  README.md  index.html  tinyobjloader.cc
